tests/neg/i20071b/B_2.scala

def test: Unit =
  foo[Scope] // ok
  bar[Scope] // error

  import Scope.i
  bar[Scope] // ok

